--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="card">
                     <h3><a href="https://github.com/NikosDeliv/Bowtide" target="_blank">Bowtide</a></h3>
-                    <p>A Terraria mod still in development.</p>
+                    <p>A Terraria mod still in development. <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3351559462" target="_blank">Steam Workshop Page</a></p>
                 </div>
                 <div class="card">
                     <h3><a href="https://github.com/NikosDeliv/Morse-Code-Translator" target="_blank">Morse Code Translator</a></h3>
