--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <h2>Certificates</h2>
             <div class="grid">
                 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0bf7c814-1ac8-4eb9-aeae-4676f35b7a53" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-                <iframe src="https://www.credly.com/badges/53a4946f-e053-4906-b78e-aea53a44bd4c/public_url"></iframe>
+                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="53a4946f-e053-4906-b78e-aea53a44bd4c" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
             </div>
         </section>
         <section id="about">
