--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </section>
         <section id="about">
             <h2>About Me</h2>
-            <p>Lorem Ipsum</p>
+            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a full-stack developer. In addition to my academic and professional pursuits, I have a hobby in game development/modding.</p>
         </section>
        
     </div>
