--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="card">
                     <img src="assets/BowtideIcon.png" alt="Bowtide Project Image">
                     <h3>Bowtide</h3>
-                    <p>A Terraria mod developed with C#. It introduces new gameplay elements and items to enhance the gaming experience in Terraria.</p>
+                    <p>A Terraria mod that introduces new archery items such as bows and accessories to enhance the ranged bow experience in Terraria.</p>
                     <div class="links">
                         <a href="https://github.com/NikosDeliv/Bowtide" target="_blank">Source Code</a>
                         <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3351559462" target="_blank">Steam Workshop</a>
