--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional pursuits, I have a passion for video games and music. My projects reflect my dedication to learning and applying my skills in practical and creative ways.</p>
+            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional pursuits, I like video games and music. My projects reflect my dedication to learning and applying my skills in practical and creative ways.</p>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
