--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHq6OUVkpP4RmYp1Uq8f8xgUpFwO6zMQ3TfiF6uGQU6dL9q4mT05UjFQ+Q5Q3lj5vIrkD9g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHq6OUVkpP4RmYp1Uq8f8xgUpFwO6zMQ3TfiF6uGQU6dL9q4mT05Uj6T5eF6cW1yo5A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional pursuits, I like video games and music. My projects reflect my dedication to learning and applying my skills in practical and creative ways.</p>
+            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional pursuits, I enjoy working on various projects and learning new technologies.</p>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
@@ -74,14 +74,42 @@
         <section id="certificates" class="section">
             <h2>Certificates</h2>
             <div class="grid">
-<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0bf7c814-1ac8-4eb9-aeae-4676f35b7a53" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-              <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="53a4946f-e053-4906-b78e-aea53a44bd4c" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>  
+                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0bf7c814-1ac8-4eb9-aeae-4676f35b7a53" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
+                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="53a4946f-e053-4906-b78e-aea53a44bd4c" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
+            </div>
+        </section>
+        <section id="technologies">
+            <h2>Technologies</h2>
+            <div class="category">
+                <h3>Languages</h3>
+                <ul>
+                    <li><i class="fas fa-code"></i> C++</li>
+                    <li><i class="fas fa-code"></i> C#</li>
+                    <li><i class="fab fa-java"></i> Java</li>
+                    <li><i class="fab fa-html5"></i> HTML5</li>
+                    <li><i class="fab fa-css3-alt"></i> CSS3</li>
+                    <li><i class="fab fa-js"></i> JavaScript</li>
+                </ul>
+            </div>
+            <div class="category">
+                <h3>Frameworks & Platforms</h3>
+                <ul>
+                    <li><i class="fab fa-github"></i> GitHub</li>
+                    <li><i class="fab fa-microsoft"></i> .NET</li>
+                    <li><i class="fab fa-react"></i> React</li>
+                </ul>
+            </div>
+            <div class="category">
+                <h3>IDEs</h3>
+                <ul>
+                    <li><i class="fas fa-laptop-code"></i> Visual Studio Code</li>
+                    <li><i class="fab fa-microsoft"></i> Visual Studio</li>
+                </ul>
             </div>
         </section>
     </div>
     <footer>
         <p>&copy; 2024 Nikos Delivos.</p>
     </footer>
-    <script src="scripts.js"></script>
 </body>
 </html>
