--- a/index.html
+++ b/index.html
@@ -83,27 +83,27 @@
             <div class="category">
                 <h3>Languages</h3>
                 <ul>
-                    <li><i class="fas fa-code"></i> C++</li>
-                    <li><i class="fas fa-code"></i> C#</li>
-                    <li><i class="fab fa-java"></i> Java</li>
-                    <li><i class="fab fa-html5"></i> HTML5</li>
-                    <li><i class="fab fa-css3-alt"></i> CSS3</li>
-                    <li><i class="fab fa-js"></i> JavaScript</li>
+                    <li><i class="faCode"></i> C++</li>
+                    <li><i class="faCode"></i> C#</li>
+                    <li><i class="faJava"></i> Java</li>
+                    <li><i class="faHtml5"></i> HTML5</li>
+                    <li><i class="faCss3Alt"></i> CSS3</li>
+                    <li><i class="faJs"></i> JavaScript</li>
                 </ul>
             </div>
             <div class="category">
                 <h3>Frameworks & Platforms</h3>
                 <ul>
-                    <li><i class="fab fa-github"></i> GitHub</li>
-                    <li><i class="fab fa-microsoft"></i> .NET</li>
-                    <li><i class="fab fa-react"></i> React</li>
+                    <li><i class="faGithub"></i> GitHub</li>
+                    <li><i class="faMicrosoft"></i> .NET</li>
+                    <li><i class="faReact"></i> React</li>
                 </ul>
             </div>
             <div class="category">
                 <h3>IDEs</h3>
                 <ul>
-                    <li><i class="fas fa-laptop-code"></i> Visual Studio Code</li>
-                    <li><i class="fab fa-microsoft"></i> Visual Studio</li>
+                    <li><i class="faLaptopCode"></i> Visual Studio Code</li>
+                    <li><i class="faMicrosoft"></i> Visual Studio</li>
                 </ul>
             </div>
         </section>
