--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHq6OUVkpP4RmYp1Uq8f8xgUpFwO6zMQ3TfiF6uGQU6dL9q4mT05Uj6T5eF6cW1yo5A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHq6OUVkpP4RmYp1Uq8f8xgUpFwO6zMQ3TfiF6uGQU6dL9q4mT05Uj8xF6h8z8x1K/C6l3fuQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional pursuits, I enjoy working on various projects and learning new technologies.</p>
+            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional pursuits, I have a variety of personal projects and contributions to share.</p>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
@@ -89,6 +89,7 @@
                     <li><i class="faHtml5"></i> HTML5</li>
                     <li><i class="faCss3Alt"></i> CSS3</li>
                     <li><i class="faJs"></i> JavaScript</li>
+                    <li><i class="faFont"></i> GDScript</li>
                 </ul>
             </div>
             <div class="category">
@@ -97,6 +98,7 @@
                     <li><i class="faGithub"></i> GitHub</li>
                     <li><i class="faMicrosoft"></i> .NET</li>
                     <li><i class="faReact"></i> React</li>
+                    <li><i class="faGamepad"></i> Godot</li>
                 </ul>
             </div>
             <div class="category">
@@ -104,6 +106,7 @@
                 <ul>
                     <li><i class="faLaptopCode"></i> Visual Studio Code</li>
                     <li><i class="faMicrosoft"></i> Visual Studio</li>
+                    <li><i class="faCodeBranch"></i> NetBeans</li>
                 </ul>
             </div>
         </section>
