--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHq6OUVkpP4RmYp1Uq8f8xgUpFwO6zMQ3TfiF6uGQU6dL9q4mT05Uj8xF6h8z8x1K/C6l3fuQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Nikos Delivos</h1>
         <div class="contact-links">
-            <a href="https://github.com/NikosDeliv" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-            <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-            <a href="mailto:delivosnikos@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+            <a href="https://github.com/NikosDeliv" target="_blank"><i class="bi bi-github"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a>
+            <a href="mailto:delivosnikos@gmail.com"><i class="bi bi-envelope"></i> Email</a>
         </div>
         <nav>
             <a href="#about">About Me</a>
@@ -25,7 +25,7 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional pursuits, I have a variety of personal projects and contributions to share.</p>
+            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional goals, I enjoy working on personal projects and learning new technologies.</p>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
@@ -83,36 +83,36 @@
             <div class="category">
                 <h3>Languages</h3>
                 <ul>
-                    <li><i class="faCode"></i> C++</li>
-                    <li><i class="faCode"></i> C#</li>
-                    <li><i class="faJava"></i> Java</li>
-                    <li><i class="faHtml5"></i> HTML5</li>
-                    <li><i class="faCss3Alt"></i> CSS3</li>
-                    <li><i class="faJs"></i> JavaScript</li>
-                    <li><i class="faFont"></i> GDScript</li>
+                    <li><i class="bi bi-code"></i> C++</li>
+                    <li><i class="bi bi-code"></i> C#</li>
+                    <li><i class="bi bi-code"></i> Java</li>
+                    <li><i class="bi bi-code-slash"></i> HTML5</li>
+                    <li><i class="bi bi-code-slash"></i> CSS3</li>
+                    <li><i class="bi bi-code-slash"></i> JavaScript</li>
+                    <li><i class="bi bi-code-slash"></i> GDScript</li>
                 </ul>
             </div>
             <div class="category">
                 <h3>Frameworks & Platforms</h3>
                 <ul>
-                    <li><i class="faGithub"></i> GitHub</li>
-                    <li><i class="faMicrosoft"></i> .NET</li>
-                    <li><i class="faReact"></i> React</li>
-                    <li><i class="faGamepad"></i> Godot</li>
+                    <li><i class="bi bi-github"></i> GitHub</li>
+                    <li><i class="bi bi-windows"></i> .NET</li>
+                    <li><i class="bi bi-react"></i> React</li>
+                    <li><i class="bi bi-controller"></i> Godot</li>
                 </ul>
             </div>
             <div class="category">
                 <h3>IDEs</h3>
                 <ul>
-                    <li><i class="faLaptopCode"></i> Visual Studio Code</li>
-                    <li><i class="faMicrosoft"></i> Visual Studio</li>
-                    <li><i class="faCodeBranch"></i> NetBeans</li>
+                    <li><i class="bi bi-laptop"></i> Visual Studio Code</li>
+                    <li><i class="bi bi-windows"></i> Visual Studio</li>
+                    <li><i class="bi bi-code-slash"></i> NetBeans</li>
                 </ul>
             </div>
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 Nikos Delivos.</p>
+        <p>&copy; 2025 Nikos Delivos.</p>
     </footer>
 </body>
 </html>
