--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,9 +12,9 @@
     <header>
         <h1>Nikos Delivos</h1>
         <div class="contact-links">
-            <a href="https://github.com/NikosDeliv" target="_blank"><i class="bi bi-github"></i> GitHub</a>
-            <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a>
-            <a href="mailto:delivosnikos@gmail.com"><i class="bi bi-envelope"></i> Email</a>
+            <a href="https://github.com/NikosDeliv" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="mailto:delivosnikos@gmail.com"><i class="fas fa-envelope"></i> Email</a>
         </div>
         <nav>
             <a href="#about">About Me</a>
@@ -82,31 +82,32 @@
             <h2>Technologies</h2>
             <div class="category">
                 <h3>Languages</h3>
-                <ul>
-                    <li><i class="bi bi-code"></i> C++</li>
-                    <li><i class="bi bi-code"></i> C#</li>
-                    <li><i class="bi bi-code"></i> Java</li>
-                    <li><i class="bi bi-code-slash"></i> HTML5</li>
-                    <li><i class="bi bi-code-slash"></i> CSS3</li>
-                    <li><i class="bi bi-code-slash"></i> JavaScript</li>
-                    <li><i class="bi bi-code-slash"></i> GDScript</li>
+                <ul class="technologies-line">
+                    <li><i class="fas fa-code"></i> C++</li>
+                    <li><i class="fas fa-code"></i> C#</li>
+                    <li><i class="fas fa-code"></i> Java</li>
+                    <li><i class="fab fa-html5"></i> HTML5</li>
+                    <li><i class="fab fa-css3-alt"></i> CSS3</li>
+                    <li><i class="fab fa-js"></i> JavaScript</li>
+                    <li><i class="fas fa-font"></i> GDScript</li>
                 </ul>
             </div>
             <div class="category">
                 <h3>Frameworks & Platforms</h3>
-                <ul>
-                    <li><i class="bi bi-github"></i> GitHub</li>
-                    <li><i class="bi bi-windows"></i> .NET</li>
-                    <li><i class="bi bi-react"></i> React</li>
-                    <li><i class="bi bi-controller"></i> Godot</li>
+                <ul class="technologies-line">
+                    <li><i class="fab fa-github"></i> GitHub</li>
+                    <li><i class="fab fa-microsoft"></i> .NET</li>
+                    <li><i class="fab fa-react"></i> React</li>
+                    <li><i class="fas fa-gamepad"></i> Godot</li>
+                    <li><i class="fab fa-bootstrap"></i> Bootstrap</li>
                 </ul>
             </div>
             <div class="category">
                 <h3>IDEs</h3>
-                <ul>
-                    <li><i class="bi bi-laptop"></i> Visual Studio Code</li>
-                    <li><i class="bi bi-windows"></i> Visual Studio</li>
-                    <li><i class="bi bi-code-slash"></i> NetBeans</li>
+                <ul class="technologies-line">
+                    <li><i class="fas fa-laptop-code"></i> Visual Studio Code</li>
+                    <li><i class="fab fa-microsoft"></i> Visual Studio</li>
+                    <li><i class="fas fa-code-branch"></i> NetBeans</li>
                 </ul>
             </div>
         </section>
