--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -83,31 +83,31 @@
             <div class="category">
                 <h3>Languages</h3>
                 <ul class="technologies-line">
-                    <li><i class="fas fa-code"></i> C++</li>
-                    <li><i class="fas fa-code"></i> C#</li>
-                    <li><i class="fas fa-code"></i> Java</li>
-                    <li><i class="fab fa-html5"></i> HTML5</li>
-                    <li><i class="fab fa-css3-alt"></i> CSS3</li>
-                    <li><i class="fab fa-js"></i> JavaScript</li>
-                    <li><i class="fas fa-font"></i> GDScript</li>
+                    <li><i class="fas fa-code"></i></li>
+                    <li><i class="fas fa-code"></i></li>
+                    <li><i class="fas fa-code"></i></li>
+                    <li><i class="fab fa-html5"></i></li>
+                    <li><i class="fab fa-css3-alt"></i></li>
+                    <li><i class="fab fa-js"></i></li>
+                    <li><i class="fas fa-font"></i></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>Frameworks & Platforms</h3>
                 <ul class="technologies-line">
-                    <li><i class="fab fa-github"></i> GitHub</li>
-                    <li><i class="fab fa-microsoft"></i> .NET</li>
-                    <li><i class="fab fa-react"></i> React</li>
-                    <li><i class="fas fa-gamepad"></i> Godot</li>
-                    <li><i class="fab fa-bootstrap"></i> Bootstrap</li>
+                    <li><i class="fab fa-github"></i></li>
+                    <li><i class="fab fa-microsoft"></i></li>
+                    <li><i class="fab fa-react"></i></li>
+                    <li><i class="fas fa-gamepad"></i></li>
+                    <li><i class="fab fa-bootstrap"></i></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>IDEs</h3>
                 <ul class="technologies-line">
-                    <li><i class="fas fa-laptop-code"></i> Visual Studio Code</li>
-                    <li><i class="fab fa-microsoft"></i> Visual Studio</li>
-                    <li><i class="fas fa-code-branch"></i> NetBeans</li>
+                    <li><i class="fas fa-laptop-code"></i></li>
+                    <li><i class="fab fa-microsoft"></i></li>
+                    <li><i class="fas fa-code-branch"></i></li>
                 </ul>
             </div>
         </section>
