--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicons@2.14.0/css/devicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,9 +12,9 @@
     <header>
         <h1>Nikos Delivos</h1>
         <div class="contact-links">
-            <a href="https://github.com/NikosDeliv" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-            <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-            <a href="mailto:delivosnikos@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+            <a href="https://github.com/NikosDeliv" target="_blank"><i class="devicon-github-plain"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="devicon-linkedin-plain"></i> LinkedIn</a>
+            <a href="mailto:delivosnikos@gmail.com"><i class="devicon-email-plain"></i> Email</a>
         </div>
         <nav>
             <a href="#about">About Me</a>
@@ -37,7 +37,9 @@
                     <div class="links">
                         <a href="https://github.com/NikosDeliv/GlimmerDex" target="_blank">Source Code</a>
                     </div>
-                    <div class="technologies">C#</div>
+                    <div class="technologies">
+                        <i class="devicon-csharp-plain"></i>
+                    </div>
                 </div>
                 <div class="card">
                     <img src="assets/BowtideIcon.png" alt="Bowtide Project Image">
@@ -47,7 +49,10 @@
                         <a href="https://github.com/NikosDeliv/Bowtide" target="_blank">Source Code</a>
                         <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3351559462" target="_blank">Steam Workshop</a>
                     </div>
-                    <div class="technologies">C#, TmodLoader</div>
+                    <div class="technologies">
+                        <i class="devicon-csharp-plain"></i>
+                        <i class="devicon-tmodloader-plain"></i>
+                    </div>
                 </div>
                 <div class="card">
                     <img src="assets/MorseIcon.png" alt="Morse Code Translator Project Image">
@@ -57,7 +62,11 @@
                         <a href="https://github.com/NikosDeliv/Morse-Code-Translator" target="_blank">Source Code</a>
                         <a href="https://nikosdeliv.github.io/Morse-Code-Translator/" target="_blank">Live Page</a>
                     </div>
-                    <div class="technologies">JavaScript, HTML, CSS</div>
+                    <div class="technologies">
+                        <i class="devicon-javascript-plain"></i>
+                        <i class="devicon-html5-plain"></i>
+                        <i class="devicon-css3-plain"></i>
+                    </div>
                 </div>
                 <div class="card">
                     <img src="assets/URPSIcon.png" alt="Ultimate Rock Paper Scissors Project Image">
@@ -67,7 +76,11 @@
                         <a href="https://github.com/NikosDeliv/Ultimate-Rock-Paper-Scissors" target="_blank">Source Code</a>
                         <a href="https://nikosdeliv.github.io/Ultimate-Rock-Paper-Scissors/" target="_blank">Live Page</a>
                     </div>
-                    <div class="technologies">JavaScript, HTML, CSS</div>
+                    <div class="technologies">
+                        <i class="devicon-javascript-plain"></i>
+                        <i class="devicon-html5-plain"></i>
+                        <i class="devicon-css3-plain"></i>
+                    </div>
                 </div>
             </div>
         </section>
@@ -83,31 +96,31 @@
             <div class="category">
                 <h3>Languages</h3>
                 <ul class="technologies-line">
-                    <li><i class="fas fa-code"></i></li>
-                    <li><i class="fas fa-code"></i></li>
-                    <li><i class="fas fa-code"></i></li>
-                    <li><i class="fab fa-html5"></i></li>
-                    <li><i class="fab fa-css3-alt"></i></li>
-                    <li><i class="fab fa-js"></i></li>
-                    <li><i class="fas fa-font"></i></li>
+                    <li><i class="devicon-cplusplus-plain"></i></li>
+                    <li><i class="devicon-csharp-plain"></i></li>
+                    <li><i class="devicon-java-plain"></i></li>
+                    <li><i class="devicon-html5-plain"></i></li>
+                    <li><i class="devicon-css3-plain"></i></li>
+                    <li><i class="devicon-javascript-plain"></i></li>
+                    <li><i class="devicon-git-plain"></i></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>Frameworks & Platforms</h3>
                 <ul class="technologies-line">
-                    <li><i class="fab fa-github"></i></li>
-                    <li><i class="fab fa-microsoft"></i></li>
-                    <li><i class="fab fa-react"></i></li>
-                    <li><i class="fas fa-gamepad"></i></li>
-                    <li><i class="fab fa-bootstrap"></i></li>
+                    <li><i class="devicon-github-plain"></i></li>
+                    <li><i class="devicon-dotnetcore-plain"></i></li>
+                    <li><i class="devicon-react-original"></i></li>
+                    <li><i class="devicon-godot-plain"></i></li>
+                    <li><i class="devicon-bootstrap-plain"></i></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>IDEs</h3>
                 <ul class="technologies-line">
-                    <li><i class="fas fa-laptop-code"></i></li>
-                    <li><i class="fab fa-microsoft"></i></li>
-                    <li><i class="fas fa-code-branch"></i></li>
+                    <li><i class="devicon-visualstudio-plain"></i></li>
+                    <li><i class="devicon-visualstudio-code-plain"></i></li>
+                    <li><i class="devicon-netbeans-plain"></i></li>
                 </ul>
             </div>
         </section>
