--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicons@2.14.0/css/devicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicons@2.14.0/css/devicons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Nikos Delivos</h1>
         <div class="contact-links">
-            <a href="https://github.com/NikosDeliv" target="_blank"><i class="devicon-github-plain"></i> GitHub</a>
+            <a href="https://github.com/NikosDeliv" target="_blank"><i class="devicon-github-original"></i> GitHub</a>
             <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="devicon-linkedin-plain"></i> LinkedIn</a>
-            <a href="mailto:delivosnikos@gmail.com"><i class="devicon-email-plain"></i> Email</a>
+            <a href="mailto:delivosnikos@gmail.com"><i class="devicon-google-plain"></i> Email</a>
         </div>
         <nav>
             <a href="#about">About Me</a>
@@ -51,7 +51,7 @@
                     </div>
                     <div class="technologies">
                         <i class="devicon-csharp-plain"></i>
-                        <i class="devicon-tmodloader-plain"></i>
+                        <i class="devicon-unity-original"></i>
                     </div>
                 </div>
                 <div class="card">
@@ -108,7 +108,7 @@
             <div class="category">
                 <h3>Frameworks & Platforms</h3>
                 <ul class="technologies-line">
-                    <li><i class="devicon-github-plain"></i></li>
+                    <li><i class="devicon-github-original"></i></li>
                     <li><i class="devicon-dotnetcore-plain"></i></li>
                     <li><i class="devicon-react-original"></i></li>
                     <li><i class="devicon-godot-plain"></i></li>
@@ -119,7 +119,7 @@
                 <h3>IDEs</h3>
                 <ul class="technologies-line">
                     <li><i class="devicon-visualstudio-plain"></i></li>
-                    <li><i class="devicon-visualstudio-code-plain"></i></li>
+                    <li><i class="devicon-vscode-plain"></i></li>
                     <li><i class="devicon-netbeans-plain"></i></li>
                 </ul>
             </div>
