--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>I'm a sophomore Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional goals, I enjoy working on personal projects and learning new technologies.</p>
+            <p>I'm a 3rd year Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional goals, I enjoy playing video games, working on personal projects and learning new technologies.</p>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
