--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="technologies">
                         <i class="devicon-csharp-plain"></i>
-                        <i class="devicon-unity-original"></i>
+                        <i class="devicon-tmodloader-plain"></i>
                     </div>
                 </div>
                 <div class="card">
