--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicon@2.15.1/devicon.min.css">
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -50,7 +51,7 @@
                     </div>
                     <div class="technologies">
                         <i class="devicon-csharp-plain"></i>
-                        <i class="devicon-tmodloader-plain"></i>
+                        <span class="iconify" data-icon="devicon:tmodloader"></span> 
                     </div>
                 </div>
                 <div class="card">
@@ -119,7 +120,7 @@
                 <ul class="technologies-line">
                     <li><i class="devicon-visualstudio-plain"></i></li>
                     <li><i class="devicon-vscode-plain"></i></li>
-                    <li><i class="devicon-netbeans-plain"></i></li>
+                    <li><span class="iconify" data-icon="devicon:netbeans"></span></li>
                 </ul>
             </div>
         </section>
