--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="technologies">
                         <i class="devicon-csharp-plain"></i>
-                        <span class="iconify" data-icon="devicon:tmodloader"></span> 
+                        <span class="iconify" data-icon="twemoji:terraria"></span>
                     </div>
                 </div>
                 <div class="card">
