--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>I'm a 3rd year Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional goals, I enjoy playing video games, working on personal projects and learning new technologies.</p>
+            <p>I'm a 3rd year Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional goals, I have a passion for game development and modding.</p>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
@@ -87,8 +87,8 @@
         <section id="certificates" class="section">
             <h2>Certificates</h2>
             <div class="grid">
-                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0bf7c814-1ac8-4eb9-aeae-4676f35b7a53" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
-                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="53a4946f-e053-4906-b78e-aea53a44bd4c" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
+                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0bf7c814-1ac8-4eb9-aeae-4676f35b7a53" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="53a4946f-e053-4906-b78e-aea53a44bd4c" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
             </div>
         </section>
         <section id="technologies">
@@ -102,7 +102,7 @@
                     <li><i class="devicon-html5-plain"></i></li>
                     <li><i class="devicon-css3-plain"></i></li>
                     <li><i class="devicon-javascript-plain"></i></li>
-                    </ul>
+                </ul>
             </div>
             <div class="category">
                 <h3>Frameworks & Platforms</h3>
